VQ-3721:Ability to view Revised Quotation Summary (Product Section) and QUOTE MODULE CLEANUP

--- a/src/app/features/gis/components/quotation/components/list-quotations/list-quotations.component.html
+++ b/src/app/features/gis/components/quotation/components/list-quotations/list-quotations.component.html
@@ -56,7 +56,7 @@
                 <td class="body">{{quotation?.premium}}</td>
                 <td class="body">{{quotation?.cover_from | titlecase}}</td>
                 <td class="body">{{quotation?.cover_to}}</td>
-                <td class="body">{{quotation?.client | titlecase}}</td>
+                <td class="body">{{quotation?.client | sentenceCase}}</td>
                 <td>
                   <button type="button" class="btn" id="btn_view_quotation" >View</button>
                 </td>
