--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="true" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+
   <p class="titleMain mt-3">{{ 'gis.quotation.quotation_covertypes' | translate }}</p>
   <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
 
@@ -41,9 +43,9 @@
                     [(ngModel)]="selectedCoverType" [checked]="i === 0" (change)="onCoverTypeChange()"
                     class="radio-btn" />
                   <span class="cover-name">{{ premiumPayload.risks[i].subclassCoverTypeDto.coverTypeDescription
-                    }}</span><br />
+                   | sentenceCase }}</span><br />
                   <small class="cover-premium">
-                    Basic Premium: <span style="font-weight: bold;">{{ risk.premium | number: '1.2-2' }}</span>
+                    Basic premium: <span style="font-weight: bold;">{{ risk.premium | number: '1.2-2' }}</span>
                   </small>
                 </label>
               </div>
@@ -88,7 +90,7 @@
                         [tableStyle]="{'min-width': '50rem'}" [(selection)]="selectedClause" responsiveLayout="scroll"
                         [autoLayout]="true" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
                         currentPageReportTemplate=" {first} - {last} of {totalRecords}" [autoLayout]="true"
-                        class='ui-datatable' styleClass="p-datatable-sm">
+                        class='ui-datatable' >
 
                         <ng-template pTemplate="header">
                           <tr>
@@ -112,11 +114,11 @@
                               text-overflow: ellipsis;
                               overflow-y: auto;
                               max-width: 250px;" pTooltip="{{clauseList.heading }}" tooltipPosition="top">
-                              {{clauseList.heading}}
+                              {{clauseList.heading |sentenceCase}}
                             </td>
                             <td class="flexible-header"
                               style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:300px; overflow-y: auto;">
-                              {{clauseList.wording}}
+                              {{clauseList.wording |sentenceCase}}
                             </td>
                             <td class="flexible-header">
                               <button pButton pRipple type="button" (click)="openHelperModal(clauseList)"
@@ -175,7 +177,7 @@
                       <p-table #dt1 [value]="limitsOfLiabilityList" dataKey="code" selectionMode="single"
                         [tableStyle]="{ 'min-width': '50rem' }" responsiveLayout="scroll" [paginator]="true" [rows]="5"
                         [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
-                        [autoLayout]="true" class='ui-datatable' styleClass="p-datatable-sm">
+                        [autoLayout]="true" class='ui-datatable' >
                         <ng-template pTemplate="header">
                           <tr>
                             <th> {{'gis.quotation.narration' | translate}}</th>
@@ -189,7 +191,7 @@
                                   text-overflow: ellipsis;
                                   overflow-y: auto;
                                   max-width: 250px;" pTooltip="{{limits.narration }}" tooltipPosition="top">
-                              {{limits.narration}}</td>
+                              {{limits.narration|sentenceCase}}</td>
                             <td>{{limits.value |number}} </td>
                           </tr>
                         </ng-template>
@@ -237,7 +239,7 @@
                       <p-table #dt1 [value]="excessesList" dataKey="code" selectionMode="single"
                         [tableStyle]="{ 'min-width': '50rem' }" responsiveLayout="scroll" [paginator]="true" [rows]="5"
                         [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
-                        [autoLayout]="true" class='ui-datatable' styleClass="p-datatable-sm">
+                        [autoLayout]="true" class='ui-datatable' >
                         <ng-template pTemplate="header">
                           <tr>
                             <th> {{'gis.quotation.narration' | translate}}</th>
@@ -251,7 +253,7 @@
                                 text-overflow: ellipsis;
                                 overflow-y: auto;
                                 max-width: 250px;" pTooltip="{{limits.narration }}" tooltipPosition="top">
-                              {{limits.narration}}</td>
+                              {{limits.narration|sentenceCase}}</td>
                             <td>{{limits.value |number}} </td>
                           </tr>
                         </ng-template>
@@ -324,7 +326,7 @@
     </div>
     <div class="float-start mb-4 ">
 
-      <a class="btn btn-link">
+      <a class="btn btn-link" (click)="navigateToQuickQuote()">
         {{'gis.quotation.back' | translate}}
       </a>
     </div>
@@ -348,7 +350,7 @@
 
       <p-table [value]="temporaryPremiumList" id="clientTable" dataKey="code"
         [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }" [(selection)]="selectedSections"
-        [resizableColumns]="true" styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable'
+        [resizableColumns]="true" responsiveLayout="scroll" class='ui-datatable'
         [autoLayout]="true" [paginator]="true" [rows]="10" [scrollable]="true" scrollDirection="horizontal"
         [showCurrentPageReport]="true" currentPageReportTemplate="{first} - {last} of {totalRecords}">
         <ng-template pTemplate="header">
@@ -366,7 +368,7 @@
               <input type="checkbox" [checked]="isSectionChecked(section)">
 
             </td>
-            <td>{{ section.sectionShortDescription }}</td>
+            <td>{{ section.sectionShortDescription |sentenceCase }}</td>
             <!-- <td [pEditableColumn]="section.freeLimit" pEditableColumnField="freeLimit">
                     <p-cellEditor >
                       <ng-template pTemplate="input">
