--- a/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.css
@@ -157,6 +157,14 @@
 #icon.btn-danger:hover {
   background-color: #f1b0b7;
 }
-
+.deleteMessage{
+  color: #000;
+  font-size: 16px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+}
 
 
