--- a/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.html
@@ -1,7 +1,8 @@
-<div class="container" style="max-width: 90%; margin: 0 auto;">
+<div class="container">
   <p class="titleMain mt-3 ms-4">Quotation sources</p>
+  <div class="container mx-2 mt-n1">
 
-  <div class="card p-4">
+  <div class="card mb-3" style=" position: relative;">
     <div class="card-body">
       <div class="row mb-3">
         <div class="col d-flex justify-content-between align-items-center">
@@ -41,7 +42,7 @@
           <div class="modal-content" id="addSourcesModal">
             <div class="modal-body">
               <button type="button" #closebutton class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close" (click)="clearForm()">X</button>
-              <h5 class="modal-title" id="modalTitle">Define a new Quotation Source</h5>
+              <h5 class="modal-title" id="modalTitle">Define a new quotation source</h5>
 
               <form [formGroup]="sourcesForm" class="flex flex-col gap-4">
                 <div class="flex flex-col">
@@ -49,17 +50,17 @@
                   <input
                     id="description"
                     formControlName="description"
-                    placeholder="Enter description"
+                    
                     class="p-2 border rounded"
                   />
                 </div>
 
                 <div class="flex flex-col">
-                  <label for="applicableModule" class="mb-2 required">Applicable Modules</label>
+                  <label for="applicableModule" class="mb-2 required">Applicable modules</label>
                   <select
                     id="applicableModule"
                     formControlName="applicableModule"
-                    class="p-2 border rounded"
+                    class="form-select form-control-sm mb-1"
                   >
                     <option value="U">Underwriting</option>
                     <option value="B">Both</option>
@@ -68,9 +69,10 @@
                 </div>
 
                 <div class="submit-container">
-                  <button class="btn btn-primary" type="submit" (click)="sourceModalAction()">
-                    Save Details
-                  </button>
+                
+                  <button type="button" class="btn btn-primary " id="search-buttons"
+                  (click)="sourceModalAction()"> Save Details</button>
+
                 </div>
 
               </form>
@@ -80,7 +82,7 @@
         </div>
       </div>
 
-      <!-- Delete Claims Modal -->
+      <!-- Delete Source Modal -->
       <div class="modal fade" id="deleteSource" tabindex="-1" role="dialog"
         aria-labelledby="deleteSource" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -111,7 +113,7 @@
           <ng-template pTemplate="header">
             <tr>
               <th>Description</th>
-              <th>Applicable Module</th>
+              <th>Applicable module</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-source>
@@ -132,5 +134,6 @@
         </p-table>
       </div>
     </div>
+  </div>
   </div>
 </div>
