--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
@@ -211,3 +211,251 @@
   :host ::ng-deep .p-dropdown {
     margin-left: -0.3rem;  /* Pull inputs slightly to the left */
   }
+    .sub-title {
+        color: rgba(0, 0, 0, 0.25);
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 18px;
+        border-right: 0px
+    }
+
+    .card-title {
+        color: #00529B;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 18px
+    }
+
+    .title {
+        color: #000;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 18px;
+    }
+
+    #icon {
+        background-color: #E4E7EB;
+        border-radius: 100px;
+        border: none;
+    }
+
+    #icon i {
+        color: #00529B;
+    }
+
+    .label {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .content {
+        color: #000;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+    }
+
+    .cancel {
+        color: #00529B;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        text-decoration-line: underline;
+    }
+
+    li {
+        cursor: pointer
+    }
+
+    #report-checks {
+        margin-right: 100px;
+    }
+
+    .nav-item>.active {
+        color:  #00529B;
+        ;
+
+    }
+
+    .nav-item>.nav-link {
+        font-size: 15px;
+    }
+
+    /* ::ng-deep
+    .p-datatable .p-datatable-tbody{
+        border:0px
+    } */
+
+    #icon {
+        background-color: #E4E7EB;
+        border-radius: 100px;
+        border: none;
+    }
+
+    #icon i {
+        color: #00529B;
+    }
+
+    .fa-pencil {
+        color: #00529B
+    }
+
+    .fa-trash-can {
+        color: #00529B
+    }
+
+    #messageLabel {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    .titleButton {
+        border-radius: 4px;
+        background: #E4E7EB;
+        color: #00529B;
+        border: 0px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 18px;
+    }
+
+    ::ng-deep .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content {
+        border: 0px;
+        color: #00529B;
+        padding: 0.5rem;
+    }
+
+    ::ng-deep .p-panelmenu .p-menuitem-text {
+
+        color: #00529B;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 18px;
+    }
+
+    ::ng-deep .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-action {
+        color: #00529B;
+        padding: 0.25rem;
+        font-weight: 700;
+    }
+
+    .point {
+        cursor: pointer;
+    }
+
+    ul {
+        list-style-type: none;
+        cursor: pointer;
+    }
+
+    ul li a.active {
+        color: #00529b;
+    }
+
+    .browse-link {
+        color: #00529b;
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+    .file-list {
+        margin-top: 20px;
+    }
+
+    .file-item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    .file-name {
+        flex: 1;
+        margin-left: 10px;
+    }
+
+    .file-actions {
+        margin-right: 47%;
+    }
+
+    .file-actions i {
+        margin-left: 10px;
+        cursor: pointer;
+    }
+
+    .card {
+        border: none;
+        border-radius: 5px;
+    }
+
+    .card-body {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    #navigationIcons {
+        margin-left: -10px
+    }
+
+    ::ng-deep .p-datatable .p-datatable-thead>tr>th {
+        font-family: Roboto;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        padding: 0.6rem 0.6rem;
+        /* text-align: left; */
+    }
+
+    .flexible-header {
+        white-space: nowrap;
+        width: auto;
+        text-align: left;
+    }
+
+    /* .ui-datatable th, .ui-datatable td {
+        white-space: nowrap;
+    } */
+    .ui-datatable th,
+    .ui-datatable td {
+        white-space: nowrap;
+    }
+   
+      .scrollable-list {
+        max-height: 100px;  /* Adjust the height as needed */
+        overflow-y: auto;   /* Enables vertical scrolling */
+        padding-left: 0px;
+        list-style: none;
+      }
+      
+      .scrollable-list li {
+        cursor: pointer;
+        padding: 4px;
+        border-bottom: 1px solid #ddd; /* Optional: Separates list items */
+        font-size: 13px;
+      }
+      
+      .scrollable-list li:hover {
+        background-color: #f0f0f0;
+      } 
+    
+      .subclass-title{
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 16.8px;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+              }
+      
+      
