--- a/src/app/features/gis/components/quotation/components/revise-reuse-quotation/revise-reuse-quotation.component.css
+++ b/src/app/features/gis/components/quotation/components/revise-reuse-quotation/revise-reuse-quotation.component.css
@@ -1,9 +1,9 @@
 .titleMain {
     color: #000;
     font-family: Roboto;
-    font-size: 12px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
 }
 
@@ -25,6 +25,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
+    color: #000;
 
 }
 ::ng-deep .custom-calendar-height .p-calendar {
@@ -54,3 +55,49 @@
 #search-buttons{
     font-weight: 500;
 }
+#quote-number-input{
+    height:35px;
+    font-size: 1rem;
+  }
+  ::ng-deep .p-dropdown{
+    /* height: 53%; */
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    border-radius: 4px;
+    height: 35px;
+    margin-left: -8px;
+    }
+    ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
+    padding:3px;
+
+
+    }
+
+    ::ng-deep
+    .p-dropdown .p-dropdown-label {
+        padding: 3px;
+        font-size: 15px;
+        color: #000;
+        margin-left: 7px;
+    }
+
+    ::ng-deep
+    .p-dropdown-filter {
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+    }
+    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+      font-size: 14px;
+      color: #000;
+      padding:3px 20px;
+      font-family: Roboto;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+    ::ng-deep .custom-calendar-height .p-calendar {
+        height: 34px !important;
+    }
+    
