--- a/src/app/shared/components/product-search-modal/product-search-modal.component.html
+++ b/src/app/shared/components/product-search-modal/product-search-modal.component.html
@@ -42,7 +42,7 @@
               <tr [pSelectableRow]="true" (click)="onProductSelected(product)"
               [class.p-highlight]="product === selectedProduct" >
                 <td>{{product.code}}</td>
-                <td>{{ product.description }}</td>
+                <td>{{ product.description |sentenceCase}}</td>
               </tr>
             </ng-template>
   
